0.83.3
  - IMGMOUNT -fs none fixed to use same geometry detect
    function that FAT filesystem mounting uses.
  - Added suppprt for mounting overlay drives using MOUNT
    command with "-t overlay" option. This feature allows
    the user to redirect new and changed file(s) to a
    different location transparently. (Wengier)
  - Updated Nuked OPL3 to latest version 1.8 for accurate
    OPL3 emulation (Wengier)
  - Added AUTOTYPE command to perform scripted keyboard
    entry into a running DOS program or game. Ported from
    DOSBox-staging, it can be used to reliably skip intro,
    provide input to answer initial startup or config
    questions, or conduct a simple demo. (Wengier)
  - Added code page 866 (Cyrillic Russian) to support
    host to guest code page mapping (tuffnatty)
  - Mouse buttons (left, middle, right) can now be mapped
    to keys in the keyboard mapper. (Wengier)
  - Support for mounting .cue files with MP3/OGG/WAV/FLAC
    compressed audio tracks. (Wengier) 
  - Rewrote the Windows installer for DOSBox-X, as well as
    the building script for the installer. All required
    build tools including the Inno Setup Compiler are now
    provided in the repository and will be automatically
    called by the building script. (Wengier)
  - Added config option "mapperfile_sdl2" for SDL2 builds.
    SDL1 and SDL2 builds of DOSBox-X can not use the same
    mapper file, or they will likely malfunction. Adding
    this option allows SDL1 and SDL2 builds of DOSBox-X
    to work with the same dosbox-x.conf file. (Wengier)
  - Added GUI menu option under "DOS" to change the long
    filename setting (enable, disable, or auto). (Wengier)
  - Improvements and fixes to the save/load state feature:
    It now supports Sound Blaster Goldplay mode;
    It now saves PC-98 FM interrupt state so that reloading
    state does not cause hung music;
    It is also fixed not to crash when used within a guest
    operting system (when the DOS kernel has been shut down